<resources>
    <string name="app_name">Wiki Filmes SDM</string>
    <string name="menu_open" translatable="false">menu_open</string>
    <string name="menu_closed" translatable="false">menu_closed</string>
    <string name="subtitle_home">Learn all about your movies</string>

    <!--Campos da Resposta-->
    <string name="txt_name">"Name: "</string>
    <string name="txt_type">"Type: "</string>
    <string name="txt_imdb_rating">"IMDB Rating: "</string>
    <string name="txt_actors">"Actors: "</string>
    <string name="txt_year">"Year: "</string>
    <string name="txt_director">"Director: "</string>
    <string name="txt_production">"Production: "</string>
    <string name="txt_genre">"Genre: "</string>
    <string name="txt_writer">"Writer: "</string>
    <string name="txt_plot">"Plot: "</string>
    <string name="txt_search">Search</string>
    <string name="txt_clean">Clean</string>
    <string name="txt_hint_title_film">Title of Film</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_movie_serie">Movie/Serie</string>
    <string name="txt_total_results">Total Results:</string>
    <string name="txt_imdbID" translatable="false">"IMDB ID: "</string>
    <string name="txt_title">Title:</string>
    <string name="txt_top10" translatable="false">TOP 10</string>

</resources>
