<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:card_view="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:padding="10dp"
              android:background="@drawable/shape_background"
>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/app_name"
              android:textSize="20sp"
              android:textAlignment="center"
    />
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/subtitle_home"
              android:textSize="18sp"
              android:textAlignment="center"
    />

    <android.support.design.widget.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/field_search"
                android:hint="@string/txt_hint_title_film"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_search"
            android:text="@string/txt_search"
            android:textSize="18sp"
            android:backgroundTint="@color/colorPrimary"
    />
    <android.support.design.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_clear"
            android:text="@string/txt_clean"
            android:textSize="18sp"
            android:backgroundTint="@android:color/holo_orange_light"
    />

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <android.support.design.card.MaterialCardView
                android:id="@+id/result_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="5dp"
                android:visibility="gone"
                card_view:cardUseCompatPadding="true"
                app:cardElevation="3dp"
        >
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_gravity="center"
                          android:padding="10dp"
            >
                <ImageView
                        android:id="@+id/field_poster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="300dp"
                        android:minWidth="250dp"
                        android:scaleType="fitXY"
                        android:layout_gravity="center"
                />

                <TextView android:id="@+id/field_title"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/txt_name"
                />
                <TextView android:id="@+id/field_year"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/txt_year"
                />
                <TextView android:id="@+id/field_type"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/txt_type"
                />
                <TextView android:id="@+id/field_imdb_rating"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/txt_imdb_rating"
                />
                <TextView android:id="@+id/field_actors"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/txt_actors"
                />
                <TextView android:id="@+id/field_director"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/txt_director"
                />
                <TextView android:id="@+id/field_production"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/txt_production"
                />
                <TextView android:id="@+id/field_genre"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/txt_genre"
                />
                <TextView android:id="@+id/field_writer"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/txt_writer"
                />
                <TextView android:id="@+id/field_plot"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/txt_plot"
                />

            </LinearLayout>

        </android.support.design.card.MaterialCardView>

    </ScrollView>

</LinearLayout>