<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".Fragments.SearchFragment"
              android:orientation="vertical"
>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/app_name"
              android:textSize="20sp"
              android:textAlignment="center"
    />

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/txt_top10"
              android:textSize="18sp"
              android:textAlignment="center"
    />

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/field_search"
                android:hint="@string/txt_hint_title_film"
        />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_search"
            android:text="@string/txt_search"
            android:textSize="18sp"
            android:backgroundTint="@color/colorPrimary"
    />
    <android.support.design.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_clear"
            android:text="@string/txt_clean"
            android:textSize="18sp"
            android:backgroundTint="@android:color/holo_orange_light"
    />

    <!--<TextView-->
            <!--android:id="@+id/total_results_tv"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/txt_total_results"-->
            <!--android:textSize="15dp"-->
            <!--android:gravity="center"-->
    <!--/>-->

    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">


        <android.support.v7.widget.RecyclerView
                android:id="@+id/list_movies_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.GridLayoutManager"
        >

        </android.support.v7.widget.RecyclerView>

    </ScrollView>


</LinearLayout>